--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   </div>
     </div>
     <div class="row justify-content-center mt-5">
-      <div class="col">
+      <div class="col-6">
         <input id="pass" type="password"/>
         <input id="check" type="checkbox" onclick="showPassword()" value="1"/>
       </div>
