--- a/index.html
+++ b/index.html
@@ -140,13 +140,16 @@
   </div>
     </div>
     <div class="row justify-content-center mt-5">
+      <div class="Col">
+        show password on checkbox checked
+      </div>
       <div class="col-6">
         <input id="pass" type="password"/>
         <input id="check" type="checkbox" onclick="showPassword()" value="1"/>
       </div>
     </div>
     <div class="row justify-content-center mt-5">
-      <h3>My ARKANOID</h3>
+      <h3 id="arkanoid-title">My ARKANOID</h3>
     </div>
       <div class="row justify-content-center">
     <canvas id="canvas" width="600" height="400"></canvas>
