fixin player angle

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           />
   </div>
   <div class="col">
-    <button onclick="callPrice()">calculate</button>
+    <button class="btn btn-dark"onclick="callPrice()">calculate</button>
   </div>
     </div>
     <div class="row justify-content-center mt-5">
@@ -152,7 +152,15 @@
       <h3 id="arkanoid-title">My ARKANOID</h3>
     </div>
       <div class="row justify-content-center">
-    <canvas id="canvas" width="600" height="400"></canvas>
+    <canvas class="col-6" id="canvas" width="600" height="400"></canvas>
+  </div>
+  <div class="row justify-content-center">
+    <div class="col-2">
+      <h3>score: </h3>
+    </div>
+    <div class="col-2">
+      <h3 id="score">0 </h3>
+    </div>
   </div>
   
   </div>
