--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
  
   </head>
   <body>
+  <template>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="navbar-brand">HODEI</a>
       <button
@@ -65,7 +66,13 @@
         </form>
       </div>
     </nav>
+
+  </template>
+
     <div class="container ">
+
+
+    <template>
         <div class="row justify-content-center mt-5">
             <div class="col">
             <form class="form-inline my-2 my-lg-0">
@@ -148,6 +155,11 @@
         <input id="check" type="checkbox" onclick="showPassword()" value="1"/>
       </div>
     </div>
+
+  </template>
+
+
+
     <div class="row justify-content-center mt-5">
       <h3 id="arkanoid-title">My ARKANOID</h3>
     </div>
@@ -161,6 +173,8 @@
     <div class="col-2">
       <h3 id="score">0 </h3>
     </div>
+
+<template>
   </div><h3 class="m-5 d-flex justify-content-center">TODO LIST</h3>
   <div class="m-5 row justify-content-center">
     
@@ -187,6 +201,8 @@
        <li class="list-group-item todo-item">party</li>
 
   </ul>
+
+</template>
 </div>
     <script>
 
@@ -245,6 +261,8 @@ document.getElementById("myList").appendChild(item);
 document.getElementById("todo-field").innerText="";
 }
     </script>
+
+
       <script src="game.js"></script>
   </body>
 </html>
