--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <h3 id="arkanoid-title">My ARKANOID</h3>
     </div>
       <div class="row justify-content-center">
-    <canvas class="col-6" id="canvas" width="600" height="400"></canvas>
+    <canvas class="col-10" id="canvas" width="600" height="400"></canvas>
   </div>
   <div class="row justify-content-center">
     <div class="col-2">
@@ -204,6 +204,7 @@
 
 </template>
 </div>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script>
 
       //password checkBox
